--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,10 @@
     "outDir": "./dist",
     "esModuleInterop": true,
 
+    /* Required to point to the type definitions */
     "typeRoots": ["./src/@types", "node_modules/@types"],
+
+    /*  Required to include the type definitions */
     "types": ["node", "express", "express-session"],
 
     "strict": true,
